# gymnastics-judge-AI

./: .env.example  .gitignore  README.md  VIDEO_LAYOUT.md  WEB.md  hold_debug.py  main.py  mediapipe-practice.py  notes.txt  pandas_practice.py  pyproject.toml  report_notes.txt  run_web.ps1  video_analyzer.py  yolov8x-pose.pt
explanations/: GYMNASTICS_MEASUREMENTS.md  angle_explanation.py  part1_detailed_explanation.py  part1_simple_explanation.md  technical_explanation.md
src/gymnastics_judge/: cli.py  config.py  core.py  gymnastics-judge-AI.code-workspace  pipeline.py  web_app.py
src/gymnastics_judge/tools/: pose_analyzer.py  rhythmic_element_analyzer.py  rhythmic_engine.py  turn_analyzer.py
src/gymnastics_judge/tools/rhythmic_mediapipe_shim/: __init__.py  mediapipe_analyzer.py
src/gymnastics_judge/tools/turn/: __init__.py  config.py  evaluate.py  geometry.py  processor.py
src/gymnastics_judge_ai.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
static/: comprehensive-report.html  index.html  overall-report.html  run-overall.html  run.html  select-file.html  select-overall.html  select-tool.html  simple-report.html
static/styles/: common.css
videos/: Perfect-1_measurements.json
