[project]
name = "gymnastics-judge-ai"
version = "0.1.0"
description = "AI Gymnastics Judge using Computer Vision and LLMs"
requires-python = ">=3.12"
dependencies = [
    "opencv-python>=4.10.0",
    "mediapipe>=0.10.18",
    "numpy>=1.26.0",
    "google-genai>=0.1.0",
    "python-dotenv>=1.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pillow>=12.1.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"
